# plc-tag-validator

./: .coverage  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: tags_bad.csv  tags_ok.csv
src/plc_tag_validator/: __init__.py  address.py  cli.py  exceptions.py  loaders.py  models.py  reporter.py  validators.py
src/plc_tag_validator/.github/workflows/: ci.yml
tests/: test_address.py  test_cli.py  test_loaders.py  test_reporter.py  test_smoke.py  test_validators.py
