# [project]
# name = "plc-tag-validator"
# version = "0.1.0"
# description = "Add your description here"
# readme = "README.md"
# authors = [
#     { name = "Mariano Vera Causich", email = "95258268+MarianoVera22@users.noreply.github.com" }
# ]
# requires-python = ">=3.13"
# dependencies = []

# [project.scripts]
# plc-tag-validator = "plc_tag_validator:main"

# [build-system]
# requires = ["uv_build>=0.11.14,<0.12.0"]
# build-backend = "uv_build"

[project]
name = "plc-tag-validator"
version = "0.1.0"
description = "CLI tool to validate PLC tag configuration files (Siemens-style)"
readme = "README.md"
authors = [
    { name = "Mariano Vera Causich" }
]
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = ["plc", "siemens", "industrial", "automation", "validation"]
dependencies = []

[project.scripts]
plc-tag-validator = "plc_tag_validator.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

# --- Ruff (linter + formatter) ---
[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# Reglas activadas. Empezamos firmes para acostumbrarnos a buen código.
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (orden de imports)
    "N",    # pep8-naming
    "UP",   # pyupgrade (sintaxis moderna)
    "B",    # bugbear (bugs comunes)
    "SIM",  # simplificaciones
    "RET",  # returns
]

[tool.ruff.format]
quote-style = "double"

# --- Mypy (type checker estricto) ---
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# --- Pytest ---
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-v --cov=plc_tag_validator --cov-report=term-missing"